--- a/index.html
+++ b/index.html
@@ -29,10 +29,28 @@
                 <button type="button" class="btn btn-primary player2-next player2"> Next </button>
             </form>
         </div>
-        <div class="game-board">
-
-
-
+        <div class="col-6 mx-auto game-board">
+            <div class="row">
+                <div class="col-4 one"></div>
+                <div class="col-4 two"></div>
+                <div class="col-4 three"></div>
+                <div class="col-4 four"></div>
+                <div class="col-4 five"></div>
+                <div class="col-4 six"></div>
+                <div class="col-4 seven"></div>
+                <div class="col-4 eight"></div>
+                <div class="col-4 nine"></div>
+            </div>
+            <div class="d-flex mt-2">
+                <button class="btn btn-success new-game pl-5 pr-5">New Game</button>
+                <button class="btn btn-success reset-game ml-auto pl-5 pr-5">Reset</button>
+            </div>
+            <div class="d-flex mt-5">
+                <h4 class="player-one-name">player one</h4> <span class="ml-auto mt-1">1</span>
+            </div>
+            <div class="d-flex">
+                <h4 class="player-two-name">player two</h4> <span class="ml-auto mt-1">1</span>
+            </div>
         </div>
     </div>
 
