--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <input type="text" id="author" class="form-control" placeholder="Please enter your name" required>
                 </div>
                 <button type="button" class="btn btn-primary player1 player1-next"> Next </button>
-                <button type="button" class="btn btn-primary player2-next player2"> Next </button>
+                <button type="button" class="btn btn-primary player2-next player2 " onclick="gameBoard.render()"> Next </button>
             </form>
         </div>
         <div class="col-6 mx-auto game-board">
