--- a/index.html
+++ b/index.html
@@ -17,33 +17,43 @@
         <div class="user-info">
             <form action="" , method="post">
                 <div class="form-group player1">
-                    <label for="title"> Player1's name</label>
-                    <input type="text" id="title" class="form-control" placeholder="Please enter your name" required>
+                    <label for="play1"> Player1's name</label>
+                    <input name="play1" type="text" id="p1" class="form-control p11" placeholder="Please enter your name" required>
+                </div>
+                <div class="form-group mark">
+                    <label for="symbol"> Please select a mark </label>
+                    <select name="" id="player1mark">
+                        <option value=""> SELECT </option>
+                        <option value="X"> X</option>
+                        <option value="O"> O </option>
+                    </select>
+
                 </div>
 
                 <div class="form-group player2">
-                    <label for="author"> Player2's name </label>
-                    <input type="text" id="author" class="form-control" placeholder="Please enter your name" required>
+                    <label for="play2"> Player2's name </label>
+                    <input type="text" id="p2" class="form-control p22" placeholder="Please enter your name" required>
                 </div>
+                <button type="button" class="btn btn-primary  markNext"> Next </button>
                 <button type="button" class="btn btn-primary player1 player1-next"> Next </button>
-                <button type="button" class="btn btn-primary player2-next player2 " onclick="gameBoard.render()"> Next </button>
+                <button type="button" class="btn btn-primary player2-next player2 " onclick="gameBoard.renderBoard()"> Next </button>
             </form>
         </div>
         <div class="col-6 mx-auto game-board">
             <div class="row">
-                <div class="col-4 one"></div>
-                <div class="col-4 two"></div>
-                <div class="col-4 three"></div>
-                <div class="col-4 four"></div>
-                <div class="col-4 five"></div>
-                <div class="col-4 six"></div>
-                <div class="col-4 seven"></div>
-                <div class="col-4 eight"></div>
-                <div class="col-4 nine"></div>
+                <div class="col-4 one" data-id="0"></div>
+                <div class="col-4 two" data-id="1"></div>
+                <div class="col-4 three" data-id="2"></div>
+                <div class="col-4 four" data-id="3"></div>
+                <div class="col-4 five" data-id="4"></div>
+                <div class="col-4 six" data-id="5"></div>
+                <div class="col-4 seven" data-id="6"></div>
+                <div class="col-4 eight" data-id="7"></div>
+                <div class="col-4 nine" data-id="8"></div>
             </div>
             <div class="d-flex mt-2">
                 <button class="btn btn-success new-game pl-5 pr-5">New Game</button>
-                <button class="btn btn-success reset-game ml-auto pl-5 pr-5">Reset</button>
+                <button class="btn btn-success reset-game ml-auto pl-5 pr-5" onclick="gameBoard.resetBoard()">Reset</button>
             </div>
             <div class="d-flex mt-5">
                 <h4 class="player-one-name">player one</h4> <span class="ml-auto mt-1">1</span>
