--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col nine" data-id="8"></div>
                 </div>
                 <div class="d-flex mt-2">
-                    <button class="btn btn-success new-game ">New Game</button>
+                    <button class="btn btn-success new-game st-game" onclick="newGame()">New Game</button>
                     <button class="btn btn-success reset-game ml-5 " onclick="gameBoard.resetBoard()">Reset</button>
                 </div>
                 <div class="d-flex mt-5">
