--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <form action="" , method="post">
                 <div class="form-group player1 float-left">
                     <label for="play1"> Player1's name</label>
-                    <input name="play1" type="text" id="p1" class="p11 form-control "
-                        placeholder="Please enter your name" required>
+                    <input name="play1" type="text" id="p1" class="p11 form-control " placeholder="Please enter your name" required>
                 </div>
 
                 <div class="form-group player2 float-right">
